fixed overflow problem in companies options menu

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -739,7 +739,7 @@
 .companyCard {
   .card {
     height: 320px;
-    overflow-y: auto;
+    overflow-y: hidden;
   }
 }
 
